--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <div class="navigation">
             <a href="/">Home</a>
             <a href="/posts">Posts</a>
-            <a href="#">About</a>
+            <a href="https://github.com/Aldhanekaa/Valoo-Social-App-1/issues/new" target="_blank">Submit Bug</a>
             <a href="/login">Login</a>
         </div>
     </nav>
@@ -44,6 +44,7 @@
                     <a href="/posts">Show More</a>
                 </div>
                 <p class="copyright">Made by <a href="https://github.com/Aldhanekaa" target="_blank">Aldhaneka</a> </p>
+                <p class="copyright">License <a href="https://github.com/Aldhanekaa" target="_blank">MIT</a> </p>
 
             </div>
     </section>
