--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -42,7 +42,9 @@
                 <p><%= posts %> </p>
                 <% } %>
                 <p class="copyright">Made by <a href="https://github.com/Aldhanekaa" target="_blank">Aldhaneka</a> </p>
-                <p class="copyright">License <a href="https://github.com/Aldhanekaa" target="_blank">MIT</a> </p>
+                <p class="copyright">License <a
+                        href="https://github.com/Aldhanekaa/Valoo-Social-App-1/blob/master/LICENSE"
+                        target="_blank">MIT</a> </p>
 
 
             </div>
