--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,9 @@
                     <a href="/posts">Show More</a>
                 </div>
                 <p class="copyright">Made by <a href="https://github.com/Aldhanekaa" target="_blank">Aldhaneka</a> </p>
-                <p class="copyright">License <a href="https://github.com/Aldhanekaa" target="_blank">MIT</a> </p>
+                <p class="copyright">License <a
+                        href="https://github.com/Aldhanekaa/Valoo-Social-App-1/blob/master/LICENSE"
+                        target="_blank">MIT</a> </p>
 
             </div>
     </section>
