--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -8,7 +8,7 @@
         <div class="navigation">
             <a href="/">Home</a>
             <a href="/posts">Posts</a>
-            <a href="https://github.com/Aldhanekaa/Valoo-Social-App-1/issues/new" target="_blank">Submit Bug</a>
+            <a href="https://github.com/Aldhanekaa/Valoo-Social-App-1/issues/new" target="_blank">Report Bug</a>
             <a href="/login">Login</a>
         </div>
     </nav>
