--- a/views/post/new.ejs
+++ b/views/post/new.ejs
@@ -7,7 +7,7 @@
         <select name="author">
             <option selected disabled>Choose author</option>
 
-            <% [["Aldhan", "Arsa", "Abi", "Bullit", "Dzaki", "Hisyam", "Ibrahim", "Halim", "Taufiq", "Gavin", "Farrel", "Shafwan", "Dean", "Rafi", "Nafidz", "Nabil"],["Alifa", "Maryam", "Yumna", "Sasa", "Mafaza"]].forEach((element, index) => { %>
+            <% [["Aldhan", "Arsa", "Abi", "Bullit", "Dzaki", "Hisyam", "Ibrahim", "Halim", "Taufiq", "Gavin", "Farrel", "Shafwan", "Dean", "Rafi", "Nafidz", "Nabil"],["Alifa", "Maryam", "Yumna", "Sasa", "Mafaza", "Hanin", "Kayla", "Ica"]].forEach((element, index) => { %>
             <% if (index == 0) {%>
             <optgroup label="Boys">
                 <% }else { %>
